--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -40,7 +40,7 @@
           </ng-container> -->
 
     <ng-container matColumnDef="dasId">
-      <th class="th" mat-header-cell *matHeaderCellDef mat-sort-header> Das ID </th>
+      <th class="th" mat-header-cell *matHeaderCellDef mat-sort-header> Das Id</th>
       <td mat-cell *matCellDef="let element"> {{element.dasId}} </td>
     </ng-container>
 
