--- a/src/app/change-password/change-password.component.html
+++ b/src/app/change-password/change-password.component.html
@@ -18,7 +18,7 @@
       </mat-menu>
     
   </mat-toolbar>
-</body><br><br>
+</body>
 
 <mat-card class="card" >
 
@@ -26,24 +26,55 @@
     
     <mat-form-field class="field" appearance="fill">
       <mat-label>DAS ID</mat-label>
-      <input matInput name="EmpID" readonly>
+      <input matInput name="EmpID" [(ngModel)]="emp.empid" readonly>
     </mat-form-field>
 
     <mat-form-field class="field" appearance="fill">
-      <mat-label>Old Password</mat-label>
-      <input matInput   name="oldPassword"  required>
+      <mat-label>Enter Old Password</mat-label>
+      <input matInput type="password"  name="oldPassword" [(ngModel)]="user.oldPassword" #oldPassword="ngModel" required>
     </mat-form-field>
 
     
     <mat-form-field class="field" appearance="fill">
       <mat-label>Enter New Password</mat-label>
-      <input matInput name="newPassword" required>
+      <input matInput type="password" pattern="^[a-zA-Z0-9!@#\$%\^\&*_=+-]{8,10}$" minlength="8" maxlength="10" 
+      name="newPassword" [(ngModel)]="user.newPassword" #newPassword="ngModel" required>
+      <mat-error>
+      <div *ngIf="newPassword.invalid && (newPassword.dirty || newPassword.touched)" class="alert">
+
+          <div *ngIf="newPassword.errors?.required">
+            newPassword is required.
+          </div>
+
+          <div *ngIf="newPassword.errors?.pattern">
+            Password must contain at least 1 Uppercase,
+            At least 1 Lowercase,
+            At least 1 Number,
+            At least 1 special character, Min 8 characters and Max 10 characters
+          </div>
+        
+        </div>
+      </mat-error>
+
     </mat-form-field>
 
     <mat-form-field class="field" appearance="fill">
-        <mat-label>Confirm Password</mat-label>
-        <input matInput name="confirmPassword" required>
-      </mat-form-field>
+      <mat-label>Confirm Password</mat-label>
+      <input matInput type="password" minlength="8" maxlength="10" name="cpassword"   [(ngModel)]="user.cpassword" #cpassword="ngModel" 
+      required>
+      
+
+      <mat-error>
+        <div *ngIf="cpassword.invalid && (cpassword.dirty || cpassword.touched)" class="alert">
+
+            <div *ngIf="cpassword.errors?.required">
+              Confirm Password is required.
+            </div>
+
+          </div>
+        </mat-error>
+
+    </mat-form-field>
 
 
 
