Added Edit profile component

--- a/src/app/editprofile/editprofile.component.css
+++ b/src/app/editprofile/editprofile.component.css
@@ -62,7 +62,9 @@
         font-size: 15px;
     }
 
-
+    .fieldd{
+        width: 100%;
+    }
     .button{
         text-align: center;
         background-color: #3f51b5;
