--- a/src/app/editprofile/editprofile.component.html
+++ b/src/app/editprofile/editprofile.component.html
@@ -1,214 +1,170 @@
 <html lang="en" class="main">
 <div>
+<body class="jumbotron">
+<mat-toolbar color="primary" class="size">
+<img class="imagenav" src="./assets/logo.png">
+<span class="spacer">Leave Tracker</span>
+<button class="home" mat-menu-item routerLink="/list">
+<mat-icon style="color: white;">home</mat-icon>
+</button>
+<button mat-icon-button [matMenuTriggerFor]="menu">
+<mat-icon>more_vert</mat-icon>
+</button>
+<mat-menu class="contact" #menu="matMenu">
+<button mat-menu-item routerLink="/applyleave">
+<mat-icon>AL</mat-icon>
+<span>Apply Leave</span>
+</button>
+<button mat-menu-item routerLink="">
+<mat-icon>logout</mat-icon>
+<span>Logout</span>
+</button>
+</mat-menu>
+</mat-toolbar>
+<router-outlet></router-outlet>
+</body>
 
-  <body class="jumbotron">
+<br><br><br>
 
+<form [formGroup]="editCustomer" autocomplete="off">
+<mat-card class="card">
+<mat-card-header>
+<img class="image" src="./assets/edit.png">
+</mat-card-header>
 
-    <mat-toolbar color="primary" class="size">
+<form class="field">
+<mat-form-field class="fieldd" appearance="fill">
+<mat-label>Das ID</mat-label>
+<input matInput name="dasId" [(ngModel)]="emp.empid" readonly #dasId="ngModel">
+</mat-form-field>
+</form>
 
-      <img class="imagenav" src="./assets/logo.png">
-      <span class="spacer">Leave Tracker</span>
-      <button class="home" mat-menu-item routerLink="/list">
-        <mat-icon style="color: white;">home</mat-icon>
-      </button>
-      <button mat-icon-button [matMenuTriggerFor]="menu">
-        <mat-icon>more_vert</mat-icon>
-      </button>
-      <mat-menu class="contact" #menu="matMenu">
-        <button mat-menu-item routerLink="/applyleave">
-          <mat-icon>AL</mat-icon>
-          <span>Apply Leave</span>
-        </button>
-        
-  
-        <button mat-menu-item routerLink="">
-          <mat-icon>logout</mat-icon>
-          <span>Logout</span>
-        </button>
-      </mat-menu>
-    </mat-toolbar>
+<mat-form-field class="field" appearance="fill">
+<mat-label>Employee ID</mat-label>
+<input matInput formControlName="employeeId" readonly>
+</mat-form-field>
 
-    <router-outlet></router-outlet>
-  </body>
+<mat-form-field class="field" appearance="fill">
+<mat-label>Name</mat-label>
+<input matInput placeholder="Enter your name" formControlName="name" required>
 
-  <mat-card class="card">
-    <mat-card-header>
-      <img class="image" src="./assets/edit.png">
-    </mat-card-header>
+<!-- <mat-error>
+<div *ngIf="name.invalid && (name.dirty || name.touched)" class="alert">
 
-    <mat-card-content>
-      <form class="example-form">
-
-        <mat-form-field class="field" appearance="fill">
-          
-          <input matInput  name="EmpID" [(ngModel)]="emp.empid" readonly
-            #dasId="ngModel" required>
-
-          <mat-error>
-            <div *ngIf="dasId.invalid && (dasId.dirty || dasId.touched)" class="alert">
-
-              <div *ngIf="dasId.errors?.required">
-                DAS ID is required.
-              </div>
-              <div *ngIf="!isValid">
-                DAS ID must start with 'A'.
-              </div>
-              <div *ngIf="dasId.errors?.minlength">
-                DAS ID must be at least 7 characters long.
-              </div>
-            </div>
-          </mat-error>
-        </mat-form-field>
-        <mat-form-field class="field" appearance="fill">
-          <mat-label>Employee ID</mat-label>
-          <input pattern="[0-9]{7}" minlength="7" maxlength="7" matInput name="employeeId" [(ngModel)]="user.employeeId"
-            #employeeId="ngModel" required>
-          <mat-error>
-            <div *ngIf="employeeId.invalid && (employeeId.dirty || employeeId.touched)" class="alert">
-
-              <div *ngIf="employeeId.errors?.required">
-                Employee ID is required.
-              </div>
-              <div *ngIf="employeeId.errors?.minlength">
-                Employee ID must be at least 7 characters long.
-              </div>
-            </div>
-          </mat-error>
-        </mat-form-field>
-
-
-        <mat-form-field class="field" appearance="fill">
-          <mat-label>Name</mat-label>
-          <input matInput name="name" [(ngModel)]="user.name" #name="ngModel" required>
-
-          <mat-error>
-            <div *ngIf="name.invalid && (name.dirty || name.touched)" class="alert">
-
-              <div *ngIf="name.errors?.required">
-                Name is required.
-              </div>
-
-            </div>
-          </mat-error>
-        </mat-form-field>
-
-        <mat-form-field class="field" appearance="fill">
-          <mat-label>GCM Level</mat-label>
-          <input matInput pattern="[0-9]{1}" minlength="1" maxlength="1" name="gcmLevel" [(ngModel)]="user.gcmLevel"
-            #gcmLevel="ngModel" required>
-          <mat-error>
-            <div *ngIf="gcmLevel.invalid && (gcmLevel.dirty || gcmLevel.touched)" class="alert">
-
-              <div *ngIf="gcmLevel.errors?.required">
-                GCM Level is required.
-              </div>
-            </div>
-          </mat-error>
-        </mat-form-field>
-
-        <mat-form-field class="field" appearance="fill">
-          <mat-label>Contact No</mat-label>
-          <input matInput pattern="[0-9]{10}" minlength="10" maxlength="10" name="mobile" [(ngModel)]="user.mobile"
-            #mobile="ngModel" required>
-          <mat-error>
-            <div *ngIf="mobile.invalid && (mobile.dirty || mobile.touched)" class="alert">
-
-              <div *ngIf="mobile.errors?.required">
-                Mobile no. is required.
-              </div>
-
-            </div>
-          </mat-error>
-        </mat-form-field>
-
-        <mat-form-field class="field" appearance="fill">
-          <mat-label>Email ID</mat-label>
-          <input matInput name="email" pattern="[^@\s]+@[^@\s]+\.[^@\s]+" type="email" [(ngModel)]="user.emailId"
-            #email="ngModel" required>
-          <mat-error>
-            <div *ngIf="email.invalid && (email.dirty || email.touched)" class="alert">
-
-              <div *ngIf="email.errors?.required">
-                Email is required.
-              </div>
-
-              <div *ngIf="email.errors?.pattern">
-                Please enter valid email Id
-              </div>
-            </div>
-          </mat-error>
-        </mat-form-field>
-
-
-        <mat-form-field class="field" appearance="fill">
-          <mat-label>Reporting Manager</mat-label>
-          <input matInput name="reportingManager" [(ngModel)]="user.reportingManager" #reportingManager="ngModel"
-            required>
-          <mat-error>
-            <div *ngIf="reportingManager.invalid && (reportingManager.dirty || reportingManager.touched)" class="alert">
-
-              <div *ngIf="reportingManager.errors?.required">
-                Reporting Manager's Name is required.
-              </div>
-
-            </div>
-          </mat-error>
-        </mat-form-field>
-
-        <mat-form-field class="field" appearance="fill">
-          <mat-label>Project Name</mat-label>
-          <input matInput name="projectName" [(ngModel)]="user.projectName" #projectName="ngModel" required>
-          <mat-error>
-            <div *ngIf="projectName.invalid && (projectName.dirty || projectName.touched)" class="alert">
-
-              <div *ngIf="projectName.errors?.required">
-                Project Name is required.
-              </div>
-
-            </div>
-          </mat-error>
-        </mat-form-field>
-
-
-        <mat-form-field class="field" appearance="fill">
-            <mat-label>Domain Type</mat-label>
-            <mat-select name="typeOfDomain" [(ngModel)]="user.typeOfDomain" required>
-                <mat-option *ngFor="let domain of typeOfDomain " [value]="domain.value">
-                    {{domain.viewValue}}
-                </mat-option>
-            </mat-select>
-          </mat-form-field>
-
-        <mat-form-field class="field" appearance="fill">
-          <mat-label>Job Role</mat-label>
-          <input matInput name="jobRole" [(ngModel)]="user.jobRole" #jobRole="ngModel" required>
-          <mat-error>
-            <div *ngIf="jobRole.invalid && (jobRole.dirty || jobRole.touched)" class="alert">
-
-              <div *ngIf="jobRole.errors?.required">
-                Job Role is required.
-              </div>
-
-            </div>
-          </mat-error>
-        </mat-form-field>
-      </form>
-
-      <mat-card-actions>
-        <button class="button" style="margin-left: 558px;" color="primary" (click)="edit()"
-          mat-raised-button>Update</button>
-
-      </mat-card-actions>
-
-      <br><br>
-
-    </mat-card-content>
-
-  </mat-card>
-
-  <mat-spinner [diameter]="100" class="loader" *ngIf="showSpinner" color="accent"></mat-spinner>
-
+<div *ngIf="name.errors?.required">
+Name is required.
 </div>
 
-</html>
+</div>
+</mat-error> -->
+</mat-form-field>
 
+<mat-form-field class="field" appearance="fill">
+<mat-label>GCM Level</mat-label>
+<input matInput formControlName="gcmLevel" required>
+<!-- <mat-error>
+<div *ngIf="gcmLevel.invalid && (gcmLevel.dirty || gcmLevel.touched)" class="alert">
+
+<div *ngIf="gcmLevel.errors?.required">
+GCM Level is required.
+</div>
+</div>
+</mat-error> -->
+</mat-form-field>
+
+<mat-form-field class="field" appearance="fill">
+<mat-label>Contact No</mat-label>
+<input matInput formControlName="mobile" required>
+<!-- <mat-error>
+<div *ngIf="mobile.invalid && (mobile.dirty || mobile.touched)" class="alert">
+
+<div *ngIf="mobile.errors?.required">
+Mobile no. is required.
+</div>
+
+</div>
+</mat-error> -->
+</mat-form-field>
+
+<mat-form-field class="field" appearance="fill">
+<mat-label>Email ID</mat-label>
+<input matInput formControlName="email" required>
+<!-- <mat-error>
+<div *ngIf="email.invalid && (email.dirty || email.touched)" class="alert">
+
+<div *ngIf="email.errors?.required">
+Email is required.
+</div>
+
+<div *ngIf="email.errors?.pattern">
+Please enter valid email Id
+</div>
+</div>
+</mat-error> -->
+</mat-form-field>
+
+<mat-form-field class="field" appearance="fill">
+<mat-label>Reporting Manager</mat-label>
+<input matInput formControlName="reportingManager" required>
+<!-- <mat-error>
+<div *ngIf="reportingManager.invalid && (reportingManager.dirty || reportingManager.touched)" class="alert">
+
+<div *ngIf="reportingManager.errors?.required">
+Reporting Manager's Name is required.
+</div>
+
+</div>
+</mat-error> -->
+</mat-form-field>
+
+<mat-form-field class="field" appearance="fill">
+<mat-label>Project Name</mat-label>
+<input matInput formControlName="projectName" required>
+<!-- <mat-error>
+<div *ngIf="projectName.invalid && (projectName.dirty || projectName.touched)" class="alert">
+
+<div *ngIf="projectName.errors?.required">
+Project Name is required.
+</div>
+
+</div>
+</mat-error> -->
+</mat-form-field>
+
+<mat-form-field class="field" appearance="fill">
+<mat-label>Domain Type</mat-label>
+<mat-select formControlName="typeOfDomain">
+<mat-option *ngFor="let domain of typeOfDomain " [value]="domain.value">
+{{domain.viewValue}}
+</mat-option>
+</mat-select>
+</mat-form-field>
+
+<mat-form-field class="field" appearance="fill">
+<mat-label>Job Role</mat-label>
+<input matInput formControlName="jobRole" required >
+<!-- <mat-error>
+<div *ngIf="jobRole.invalid && (jobRole.dirty || jobRole.touched)" class="alert">
+
+<div *ngIf="jobRole.errors?.required">
+Job Role is required.
+</div>
+
+</div>
+</mat-error> -->
+</mat-form-field>
+
+<mat-card-actions>
+<button class="button" style="margin-left: 46.5%;" color="primary" (click)="edit()"
+mat-raised-button>Update</button>
+</mat-card-actions>
+
+<br><br>
+
+</mat-card>
+</form>
+
+<mat-spinner [diameter]="100" class="loader" *ngIf="showSpinner" color="accent"></mat-spinner>
+
+</div>
+</html>
