--- a/src/app/view/view.component.css
+++ b/src/app/view/view.component.css
@@ -56,5 +56,13 @@
 .home{
   margin-left: 30%;
 }
-
+.leave{
+  margin-left: 45%;
+  font-size:large;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+.num{
+font-size:large;
+font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
   
