--- a/src/app/change-password/change-password.component.html
+++ b/src/app/change-password/change-password.component.html
@@ -11,6 +11,14 @@
         <mat-icon>more_vert</mat-icon>
       </button>
       <mat-menu class="contact" #menu="matMenu">
+        <button mat-menu-item routerLink="/applyleave">
+          <mat-icon>AL</mat-icon>
+          <span>Apply Leave</span>
+        </button>
+        <button mat-menu-item routerLink="/editprofile">
+          <mat-icon>account_circle</mat-icon>
+          <span>Edit Profile</span>
+        </button>
         <button mat-menu-item routerLink="">
           <mat-icon>logout</mat-icon>
           <span>Logout</span>
