--- a/src/app/forgotpassword/forgotpassword.component.html
+++ b/src/app/forgotpassword/forgotpassword.component.html
@@ -28,7 +28,7 @@
         <mat-form-field class="fieldd">
           
           <input type="text" matInput placeholder="Enter DAS ID" name="dasId"
-          formControlName="firstCtrl" minlength="7" maxlength="7" >
+          formControlName="firstCtrl" minlength="7" maxlength="7"pattern="[A0-9]{7}$" required >
           <mat-error 
           *ngIf="(form1.firstCtrl.invalid && form1.firstCtrl.errors?.required) && 
           (form1.firstCtrl.dirty || form1.firstCtrl.touched )">
@@ -39,7 +39,7 @@
            <mat-error class="alertext" 
            *ngIf="form1.firstCtrl.invalid && form1.firstCtrl.errors?.minlength">
 
-             Das Id must contain 7 characters
+           Das Id must start with 'A' and contain 7 characters
             </mat-error>
 
         </mat-form-field>
@@ -54,7 +54,7 @@
         <mat-form-field class="fields">
           <mat-label>Enter Secret Key</mat-label>
           <input matInput formControlName="secondCtrl" placeholder="Enter Secret Key" name="secretKey"
-                maxlength="5" required >
+                maxlength="5"  required >
                  <mat-error 
                  *ngIf="(form2.secondCtrl.invalid && form2.secondCtrl.errors?.required) && 
                  (form2.secondCtrl.dirty || form2.secondCtrl.touched )">
@@ -140,7 +140,7 @@
     </mat-step>
     <mat-step>
       <ng-template matStepLabel>Done</ng-template>
-      <p style="text-align: center;">{{pswdresetstatus}}</p>
+      <p style="text-align: center;">Password Updated Successfully</p>
     </mat-step>
 
   </mat-stepper>
