--- a/src/app/view/view.component.css
+++ b/src/app/view/view.component.css
@@ -57,12 +57,19 @@
   margin-left: 30%;
 }
 .leave{
-  margin-left: 45%;
+  margin-left: 43%;
   font-size:large;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 .num{
 font-size:large;
 font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+padding-left : 9px; ;
+}
+.details{
+  margin-left:46% ;   
+  font-size : 20px ; 
+  font-weight: 200;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
   
