--- a/src/app/applyleave/applyleave.component.html
+++ b/src/app/applyleave/applyleave.component.html
@@ -11,9 +11,13 @@
       <mat-icon>more_vert</mat-icon>
     </button>
     <mat-menu class="contact" #menu="matMenu">
-      <button mat-menu-item routerLink="/list">
-        <mat-icon>person</mat-icon>
-        <span>Employee Details</span>
+      <button mat-menu-item routerLink="/changePassword">
+        <mat-icon>lock</mat-icon>
+        <span>Change Password</span>
+      </button>
+      <button mat-menu-item routerLink="/editprofile">
+        <mat-icon>account_circle</mat-icon>
+        <span>Edit Profile</span>
       </button>
       <button mat-menu-item routerLink="">
         <mat-icon>logout</mat-icon>
